--- a/gb/nf6092_6.md
+++ b/gb/nf6092_6.md
@@ -1,4 +1,21 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://github.com/1992513/www/blob/master/README.md?bipmhmmnu#1" target="_blank">首页</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/1?nlfgto" target="_blank">动态网</a> | <a href="https://doqmgyop4u892.cloudfront.net/2?hypxpx" target="_blank">大纪元</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/4?xpekztj" target="_blank">看中国</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/pHh5q?unhgty" target="_blank">新生网</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/tktpt?yhkjqrntz" target="_blank">阿波罗网</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/Mjpvu?lsfwx" target="_blank">干净世界</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/10?eplenrl" target="_blank">退党服务</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/Rffqf?rzeop" target="_blank">明慧广播</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/nw9Vn?cdvgs" target="_blank">传奇时代</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/AF9AG?nlvig" target="_blank">新境界影视</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/zqMQA?pmoft" target="_blank">文昭谈论</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/7?hspkdq" target="_blank">明慧</a></p><p><a href="https://d1ntfewljph5k2.cloudfront.net/9?wqzpeyr" target="_blank">大法</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/3?hmybyhtd" target="_blank">新唐人</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/obAhT?rskkyvtn" target="_blank">人民报</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/xXNHu?wakdlkd" target="_blank">放光明</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/5?xmaynskj" target="_blank">新纪元</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/6?gkwzexeec" target="_blank">希望之声</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/11?aksupcto" target="_blank">无界网络</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/Pueji?snsqv" target="_blank">追查国际</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/16?jsihr" target="_blank">明慧之窗</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/LdvzZ?ayidp" target="_blank">细语人生</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/fBn3r?aechhs" target="_blank">新世纪影视</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/PUWMb?pjjut" target="_blank">江峰时刻</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/8?tjvwdrwtp" target="_blank">正见</a></p></td></tr><tr><td width="742"><h3><p><strong>独家视角</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d32em81kvdduht.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d32em81kvdduht.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://github.com/1992513/www/blob/master/README.md?vwqicbrh#1" target="_blank">首页</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/1?unlbkz" target="_blank">动态网</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/2?jzzmtfyt" target="_blank">大纪元</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/4?eclljhlx" target="_blank">看中国</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/pHh5q?hckpwp" target="_blank">新生网</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/tktpt?cqsmsucz" target="_blank">阿波罗网</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Mjpvu?kdxpjoiy" target="_blank">干净世界</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/10?dczzpo" target="_blank">退党服务</a> | <a href="https://d3myewunzonann.cloudfront.net/Rffqf?kkodixykf" target="_blank">明慧广播</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/nw9Vn?uemjy" target="_blank">传奇时代</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/AF9AG?xwfkard" target="_blank">新境界影视</a> | <a href="https://d8jw662akk94j.cloudfront.net/zqMQA?rtjkmw" target="_blank">文昭谈论</a> | <a href="https://d2p23c289x62lr.cloudfront.net/7?jrtzqlvb" target="_blank">明慧</a></p><p><a href="https://dycmgeziwp90b.cloudfront.net/9?wxcnf" target="_blank">大法</a> | <a href="https://doqmgyop4u892.cloudfront.net/3?vryulpw" target="_blank">新唐人</a> | <a href="https://d2oemtubh889hy.cloudfront.net/obAhT?ryepnah" target="_blank">人民报</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/xXNHu?beuiimfe" target="_blank">放光明</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/5?urdkjhu" target="_blank">新纪元</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/6?humrkls" target="_blank">希望之声</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/11?skcscbh" target="_blank">无界网络</a> | <a href="https://duxu97yt14q37.cloudfront.net/Pueji?kgoogfw" target="_blank">追查国际</a> | <a href="https://doqmgyop4u892.cloudfront.net/16?bawkder" target="_blank">明慧之窗</a> | <a href="https://di88ceki78g29.cloudfront.net/LdvzZ?xtxgizdk" target="_blank">细语人生</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/fBn3r?enrtokm" target="_blank">新世纪影视</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/PUWMb?nkyzsepo" target="_blank">江峰时刻</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/8?dpboalrxn" target="_blank">正见</a></p></td></tr><tr><td width="742"><h3><p><strong>独家视角</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d3vasadypm0jb7.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/11/4/n13354322.md#1" target="_blank">【内幕】陕西将“直播带货”纳入党建</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/11/4/n13354322.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/11/21bf9d42103a738037722abbc7c7f55f-150x120.jpg" align ="left"></a>2020年的疫情促使越来越多的中国人涌入线上直播间购物。而大纪元获得的陕西省政府文件显示，中共也盯上了电商直播，并利用党的建设和强监管来进行控制。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年11月07日 7:00 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/11/1/n13346043.md#1" target="_blank">【内幕】中共加入联合国50年来的野心</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/11/1/n13346043.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-693331196-600x400-1-150x120.jpg" align ="left"></a>50年前，联合国创始成员之一的中华民国，被中共政权篡夺了席位。不同于前任为联合国的成立，做出了抗击日本法西斯，扭转二战局势的伟大贡献；50年来，中共给世界带来巨大挑战，正借助联合国的平台，试图建立它主导的国际新秩序。
+独家：中共的联合国维和部队干了些什么
+
+
+“找呀找呀找朋友，找到一个好朋友……”，2019年4月10日，在时刻可能遭遇恐怖袭击和炮火轰.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年11月02日 11:35 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/28/n13336903.md#1" target="_blank">王友群：江泽民是活摘器官的罪魁祸首</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/28/n13336903.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/10/id13336906-1308260848202378-600x400-150x120.jpg" align ="left"></a>最近，韩剧《鱿鱼游戏》第一季第五集，出现活摘人体器官的情节，与当今发生在中国的大规模活摘法轮功学员器官的情况有惊人的相似，再次引发国际社会对中共活摘罪行的关注。
+
+听文章：
+
+（听更多请至“听纪元”平台）
+
+近日，英国《每日邮报》、《太阳报》等多家西方媒体，以及韩国《朝鲜日报》、《中央日报》等，都纷纷引用权威人权专家和机构的调查，报导了中共活摘器.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年10月29日 9:08 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/26/n13331924.md#1" target="_blank">【独家】文件泄福建泉州能耗双控具体措施</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/26/n13331924.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/10/id13309551-000_9NP2DM-150x120.jpg" align ="left"></a>近期中国大规模的拉闸限电不但迫使北方民众面临寒冬的威胁，亦给中国和全球经济复苏的黯淡前景泼了一盆冷水。而大纪元近期获得的福建省内部文件揭示了另一个严峻的现实：中共当局明知电力紧张，依然强推“能耗双控”。
+泉州文件披露能耗双控成为领导考核标准
+2021年9月份，中共福建省泉州市政府向辖下各县市印发了一份考核党政领导生态环境保护的《评分细则》征求意见稿。
+.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年10月27日 10:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/16/n13307886.md#1" target="_blank">【独家】郑州医院遭疫情问责 文件泄内幕</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/16/n13307886.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/10/id13307917-a611e0d7e0a8b9995ff18562de48e0ad-150x120.jpg" align ="left"></a>7月以来，河南省会郑州市先遭暴雨袭城，紧接着爆发医院内COVID-19感染，导致全市封城，多名卫健官员被免职、甚至立案调查。不过，大纪元最新获得的六院内部文件不但泄露了背后内情，还间接证实了郑州的雨灾和疫情是人祸，而非天灾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年10月17日 1:36 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/15/n13305416.md#1" target="_blank">【内幕】前公安副部长傅政华的酷吏本色</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/10/15/n13305416.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/10/id13307218-GettyImages-1092851784-150x120.jpg" align ="left"></a>看到昔日下令抓捕和对自己酷刑逼供的傅政华落马，中国商人徐崇阳和维权律师王全璋等人百感交集。曾公开控告傅的程海律师告诉大纪元，“傅政华如今可能会想起要为自己找维权律师了，但我肯定不为他辩护。他这种人是自食其果。”
 湖北商人徐崇阳痛诉“生不如死”的经历
@@ -66,15 +83,5 @@
 
 8月9日，中美在联合国安理会上就南海问题激烈交锋。美国国务卿布林肯（Antony Blinken）不点名批评.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月17日 2:36 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank">分析：习近平伸出干预市场的第三只手</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-150x120.jpg" align ="left"></a>今年以来，当局发起的监管风暴斩落不少明星企业。现在官媒亦加入这场惊弓之鸟的游戏，一篇评论瞬间令成百上千亿元的市场价值灰飞烟灭。中国产业界陷入风声鹤唳的惊恐中，而世界或将面对中共发展经济的一个必然恶果，即媒体舆论已成为干预或破坏经济的“第三只手”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 12:49 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/10/n13153422.md#1" target="_blank">奥运场外大陆高涨的“民族主义”情绪</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/10/n13153422.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114985-GettyImages-1234173859-150x120.jpg" align ="left"></a>新冠病毒大流行尚未消退，刚刚落下帷幕的东京奥运会又出现了中共培育出的“新民族主义”狂热情绪正在快速蔓延。
-大陆“民族主义”情绪为何如此高涨
-在东京奥运会的赛场上，中国代表团取得了第二名的成绩，仅次于美国。在赛场之外，中国“小粉红”们亦在四面出征，甚至连自己人也不放过。
-
-代表中共出征奥运会的中国选手们，如今也成为小粉红们征讨的目标。
-
-7月26日.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 8:03 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/9/n13150791.md#1" target="_blank">钟原：党媒含糊其辞 中国洪灾到底多严重？</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/9/n13150791.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150812-GettyImages-1234276193-150x120.jpg" align ="left"></a>大陆疫情已经掩盖不住，中共党媒也不得不报导，但与此同时，洪灾的真相再次被刻意掩盖，大多数人对洪灾的严重程度并不知情。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月10日 5:58 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/5/n13141769.md#1" target="_blank">基辛格访华50年 中共对美仇恨从未变</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/5/n13141769.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/056130cec3fe7850e8833b41bd651f28-150x120.jpg" align ="left"></a>50年前的7月，美国前国务卿基辛格访华，行程虽然秘密，但受到了中共的高级别礼遇。今年7月，美国副国务卿舍曼访华遭遇了中共外交官员战狼式的怠慢。与基辛格50年前访华“破冰”时的情形相比，中美关系发生了什么变化？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月06日 10:00 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/3/n13134887.md#1" target="_blank">【独家】文件泄中共谋取以色列高科技秘闻</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/21/8/3/n13134887.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1055941042-600x400-150x120.jpg" align ="left"></a>7月底中共在联合国就最新以巴冲突对以色列做出强硬表态，之前在6月份以色列谴责了中共新疆暴行，这显示出中以关系或闹僵。而大纪元所获内部文件，泄露了中共一直在谋取以色列的军民高科技技术。近期两国翻脸可能会截断中共获取西方先进技术的后路。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月05日 12:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/1992513/djy/blob/master/gb/nf6092_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf6092_7.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf6092_6.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf6092_6.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf6092_6.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf6092_6.htm">https://www.epochtimes.com/gb/nf6092_6.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
